# llvmlite

./: .clang-format  .codeclimate.yml  .coverage  .coveragerc  .flake8  .gitattributes  .gitignore  .landscape.yml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .scrutinizer.yml  .travis.yml  .ycm_extra_conf.py  AUTHORS  CHANGE_LOG  MANIFEST.in  README.md  README.rst  appveyor.yml  azure-pipelines.yml  bench.py  building_from_source.rst  codecov.yml  coverage.conf  readthedocs.yml  renovate.json  requirements.txt  run_coverage.py  runtests.py  setup.cfg  setup.py  test.ll  test_llvmir.py  test_parseasm.py  test_sum.py  testorcjit.py  tmp.patch  versioneer.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  first_rc_checklist.md  sub_rc_checklist.md
.github/workflows/: build.yml  build_orchestrator.yml  linux-tests.yml  llvmdev_build.yml  llvmdev_build_win-arm64.yml  llvmdev_linux-64_conda_builder.yml  llvmdev_manylinux_build.yml  llvmdev_win-64_conda_builder.yml  llvmdev_win_builder.yml  llvmlite_build.yml  llvmlite_conda_builder.yml  llvmlite_linux-64_conda_builder.yml  llvmlite_linux-64_wheel_builder.yml  llvmlite_linux-aarch64_wheel_builder.yml  llvmlite_linux-arm64_conda_builder.yml  llvmlite_linux-arm64_wheel_builder.yml  llvmlite_linux-s390x_wheel_builder.yml  llvmlite_osx-64_conda_builder.yml  llvmlite_osx-64_wheel_builder.yml  llvmlite_osx-arm64_conda_builder.yml  llvmlite_osx-arm64_wheel_builder.yml  llvmlite_win-64_conda_builder.yml  llvmlite_win-64_wheel_builder.yml  llvmlite_win-arm64_conda_builder.yml  llvmlite_win-arm64_wheel_builder.yml  llvmlite_win_builder.yml  macos-tests.yml  manylinux_test.yml  pre-commit.yml  release.yml  test_python_314_dev.yml  tests.yml  upload_packages.yml  windows-tests.yml
buildscripts/azure/: azure-linux-macos.yml  azure-windows.yml
buildscripts/github/: MacOSX10.15.sdk.checksum  config.toml  download_artifacts.py  find_workflow_runs.py  gen_matrix.py  install_llvmdev.ps1  install_llvmdev.sh  llvmdev_evaluate.py  llvmlite_evaluate.py  patch_osx64_wheel.sh  setup_platform.sh  validate_osx-64_wheel.sh  validate_win-64_wheel.py  validate_win64_wheel.py  workflow_groups.json
buildscripts/incremental/: after_success.sh  build.cmd  build.sh  install_miniconda.sh  setup_conda_environment.cmd  setup_conda_environment.sh  test.cmd  test.sh
buildscripts/manylinux/: README.md  build_llvmdev.sh  build_llvmlite.sh  docker_run.sh  docker_run_aarch64.sh  docker_run_s390x.sh  docker_run_x64.sh  prepare_miniconda.sh
buildscripts/manylinux1/: README.md  build_llvmdev.sh  build_llvmlite.sh  configure_conda.sh  docker_run.sh  docker_run_x32.sh  docker_run_x64.sh  prepare_miniconda.sh
buildscripts/manylinux2010/: README.md  build_llvmdev.sh  build_llvmlite.sh  configure_conda.sh  docker_run.sh  docker_run_x32.sh  docker_run_x64.sh  prepare_miniconda.sh
buildscripts/manylinux2014/: README.md  build_llvmdev.sh  build_llvmlite.sh  configure_conda.sh  docker_run.sh  docker_run_x32.sh  docker_run_x64.sh  prepare_miniconda.sh
buildscripts/manylinux_2_17/: README.md  build_llvmdev.sh  build_llvmlite.sh  configure_conda.sh  docker_run.sh  docker_run_aarch64.sh  docker_run_ppc64le.sh  docker_run_x64.sh  prepare_miniconda.sh
buildscripts/windows_arm64/: bld_llvm_winarm64.bat
conda-recipe/: bld.bat  build.sh  meta.yaml
conda-recipes/: 0001-Revert-Limit-size-of-non-GlobalValue-name.patch  0001-Revert-NVPTX-Use-atomicrmw-fadd-instead-of-intrinsic.patch  0001-RuntimeDyld-Add-test-case-that-was-accidentally-left.patch  0001-RuntimeDyld-Fix-a-bug-in-RuntimeDyld-loadObjectImpl-.patch  0001-perf_tools.patch  0002-Revert-NVPTX-Remove-now-unused-atomic.load.add.f32-i.patch  D47188-svml-VF-llvm9.patch  D47188-svml-VF.patch  D47188-svml.patch  compiler-rt-14-fp-xstate-magic1.patch  compiler-rt-cfi-startproc-war.patch  compiler-rt-macos-build.patch  compiler-rt-windows-build.patch  expect-fastmath-entrypoints-in-add-TLI-mappings.ll.patch  hotfix-LoopVectorizer-VF.diff  intel-D47188-svml-VF.patch  intel-svml.patch  llvm-9.0.1-arm64.patch  llvm-build-race-condition.patch  llvm-elf-relocation.patch  llvm-lto-static.patch  llvm-parse-fp-constants.patch  llvm11-consecutive_registers.patch  llvm12-0001-Revert-Limit-size-of-non-GlobalValue-name.patch  llvm12-consecutive_registers.patch  llvm12-lto-static.patch  llvm13-lto-static.patch  llvm14-clear-gotoffsetmap.patch  llvm14-remove-use-of-clonefile.patch  llvm14-svml.patch  llvm15-clear-gotoffsetmap.patch  llvm15-remove-use-of-clonefile.patch  llvm15-svml.patch  llvm22-aarch64-windows-target-detection.patch  partial-testing.patch  test-frame-record-win-arm64.ll  twine_cfg_undefined_behavior.patch  weak_GV_add_TOC_nop_by_stefanp-11.0.1.patch  weak_GV_add_TOC_nop_by_stefanp.patch
conda-recipes/appveyor/: build_and_test.bat  install.ps1
conda-recipes/lld/: bld.bat  build.sh  meta.yaml  (+1 more)
docs/: Makefile  environment.yml  gh-pages.py  make.bat
examples/: ir_fpadd.py  ll_fpadd.py  lljit.py  lljit_lookup_invalid_functions_iterator.py  llvmir.py  llvmir_iter.py  newpassmanagers.py  npm_passes.py  npm_pipeline.py  optimization-passes-npm.py  optimization-pipeline-npm.py  parseasm.py  printer-passes-npm.py  sum.py
ffi/: CMakeLists.txt  COMPILER_RT_LOCATION  MachoLLDpatch.patch  Makefile  Makefile.cygwin  Makefile.freebsd  Makefile.linux  Makefile.netbsd  Makefile.openbsd  Makefile.osx  PASSREGISTRY.def  assembly.cpp  bitcode.cpp  build.py  build_lld.sh  config.cpp  core.cpp  core.h  custom_passes.cpp  dylib.cpp  executionengine.cpp  ffi_types.h  file_system.cpp  initfini.cpp  legacypassmanagers.cpp  linker.cpp  lld.cpp  llvmlite-bridge.hpp  memorymanager.cpp  memorymanager.h  module.cpp  neworcjit.cpp  newpassmanagers.cpp  object_file.cpp  orcjit.cpp  passmanagers.cpp  targets.cpp  transforms.cpp  type.cpp  value.cpp
ffi/LLVMHello/: CMakeLists.txt
ffi/LLVMHello/hello/: Hello.cpp
ffi/dummy/: CMakeLists.txt
ffi/passes/: CMakeLists.txt
ffi/passes/hello/: CMakeLists.txt  Hello.cpp  hello.cpp
llvmlite/: __init__.py  _version.py  enum.py  utils.py
purellvmpy/: llvmir.py
(+180 files in other folders)
